--- a/style.css
+++ b/style.css
@@ -112,7 +112,47 @@ a{
 
 
 /* Middle Section */
+#middle{
 
+}
+#middle .middle{
+  flex-direction: column;
+  text-align: center;
+  max-width: 1500px;
+  margin: 0;
+  padding: 100px 0;
+}
+#middle .section-title{
+font-size: 4rem;
+font-weight: 300;
+color: black;
+margin-bottom: 10px;
+text-transform: uppercase;
+letter-spacing: 2rem;
+text-align: center;
+}
+#middle .section-title span{
+    color:coral
+}
+#middle .middle-top p{
+    font-size: 1.4rem;
+    margin-top: 5px;
+    line-height: 2.5rem;
+    font-weight: 300;
+    letter-spacing:.05rem;
+}
+#middle .middle-bottom{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+
+
+}
+.middle-item .icon{
+  
+
+}
 
 /* End Middle Section */
 
