styled middle sectio imagen

--- a/style.css
+++ b/style.css
@@ -149,10 +149,34 @@ text-align: center;
 
 
 }
-.middle-item .icon{
+/* Card Image  */
+#middle .middle-item{
+    flex-basis: 80%;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    padding: 30px;
+    border-radius: 10px;
+    background-image:url(./img/image.jpg);
+    background-size: cover;
+    margin: 10px 5%;
+    position: relative;
+ 
+}
+/* Card Image Overlay */
+#middle .middle-item::after{
+    content: "";
+    position: absolute;
+    left: 0;
+    top:0 ;
+    height: 100%;
+    width: 100%;
+    background-color: black;
+    opacity: .4;
   
 
 }
+
 
 /* End Middle Section */
 
