--- a/style.css
+++ b/style.css
@@ -182,16 +182,16 @@ text-align: center;
 
 
 /* Keyframes */
- @keyframes text_reveal_box{
+/* @keyframes text_reveal_box{
 50%{
-        /* width: 100%; */
+        width: 100%;
         left:0;
 }
 100%{
         width: 0% ;
         left: 100%;
     }   
-}
+} */
 @keyframes text_reveal{
     100%{
         color: white;
