added middle-item styling

--- a/style.css
+++ b/style.css
@@ -19,6 +19,8 @@ a{
     display:flex;
     align-items: center;
     justify-content: center;
+}
+img{
 
 }
 
@@ -161,6 +163,8 @@ text-align: center;
     background-size: cover;
     margin: 10px 5%;
     position: relative;
+    z-index: 1;
+
  
 }
 /* Card Image Overlay */
@@ -172,11 +176,38 @@ text-align: center;
     height: 100%;
     width: 100%;
     background-color: black;
-    opacity: .4;
-  
+    opacity: .2;
+}
+/* End Card Image Overlay */
 
+
+#middle .middle-bottom .icon{
+    height: 80px;
+    width: 80px;
+    margin-bottom: 20px;
 }
 
+#middle .middle-item h2{
+    font-size: 2rem;
+    color: black;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+}
+#middle .middle-item p{
+  color: black;
+  text-align: left;
+    font-size:  1.4rem;
+    line-height: 1.9rem;
+    
+
+}
+#middle .middle-bottom .icon .img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    color:coral;
+
+}
 
 /* End Middle Section */
 
